--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="32feet.NET" version="3.5.0.0" targetFramework="net462" />
+  <package id="Costura.Fody" version="1.6.2" targetFramework="net462" developmentDependency="true" />
+  <package id="Fody" version="2.2.0" targetFramework="net462" developmentDependency="true" />
   <package id="InTheHand.Pontoon" version="10.2018.3.19" targetFramework="net462" />
+  <package id="Nefarius.ViGEmClient" version="1.15.16" targetFramework="net462" />
   <package id="Network.Bluetooth" version="4.0.1803.22" targetFramework="net462" />
 </packages>
