--- a/packages.config
+++ b/packages.config
@@ -6,4 +6,5 @@
   <package id="InTheHand.Pontoon" version="10.2018.3.19" targetFramework="net462" />
   <package id="Nefarius.ViGEmClient" version="1.15.16" targetFramework="net462" />
   <package id="Network.Bluetooth" version="4.0.1803.22" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net462" />
 </packages>
