--- a/TimeBoxJoy.csproj
+++ b/TimeBoxJoy.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Maps\IJoyMap.cs" />
     <Compile Include="JoyStick.cs" />
     <Compile Include="Maps\KeyBoardJoyMap.cs" />
+    <Compile Include="Maps\VitualXinputJoyMap.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\FileHelper.cs" />
