--- a/TimeBoxJoy.csproj
+++ b/TimeBoxJoy.csproj
@@ -105,16 +105,39 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="JoyEnum\TimeBoxButton.cs" />
+    <Compile Include="JoyManager.cs" />
+    <Compile Include="MapConfig\DefaultMapConfig.cs" />
+    <Compile Include="MapConfig\KeyBoardConfig.cs" />
+    <Compile Include="MapConfig\XInputConfig.cs" />
+    <Compile Include="MapEdit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MapEdit.Designer.cs">
+      <DependentUpon>MapEdit.cs</DependentUpon>
+    </Compile>
     <Compile Include="Maps\IJoyMap.cs" />
     <Compile Include="JoyStick.cs" />
     <Compile Include="Maps\KeyBoardJoyMap.cs" />
     <Compile Include="Maps\VitualXinputJoyMap.cs" />
+    <Compile Include="NewMap.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NewMap.Designer.cs">
+      <DependentUpon>NewMap.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\FileHelper.cs" />
     <Compile Include="Utils\HexHelper.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MapEdit.resx">
+      <DependentUpon>MapEdit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NewMap.resx">
+      <DependentUpon>NewMap.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -124,6 +147,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -135,7 +159,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="TimeBoxJoy_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -157,6 +180,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="1.ico" />
+    <None Include="MapPic.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\Fody.2.2.0\build\net452\Fody.targets" Condition="Exists('packages\Fody.2.2.0\build\net452\Fody.targets')" />
