--- a/packages.config
+++ b/packages.config
@@ -4,6 +4,7 @@
   <package id="Costura.Fody" version="1.6.2" targetFramework="net462" developmentDependency="true" />
   <package id="Fody" version="2.2.0" targetFramework="net462" developmentDependency="true" />
   <package id="InTheHand.Pontoon" version="10.2018.3.19" targetFramework="net462" />
+  <package id="Microsoft.ClearScript" version="5.5.6" targetFramework="net462" />
   <package id="Nefarius.ViGEmClient" version="1.15.16" targetFramework="net462" />
   <package id="Network.Bluetooth" version="4.0.1803.22" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net462" />
